--- a/src/scss/container.sass
+++ b/src/scss/container.sass
@@ -37,7 +37,7 @@ $space-xxl: 100px
             display: flex
             justify-content: center
             align-items: center
-            height: 100%
-            padding: 60px 0
-            +mq-md ()
-                height: 100vh
+            height: 100vh
+            @media all and (orientation: landscape), all and (max-height: 576px)
+                padding: 80px 0
+                height: 100%
