add media queries

--- a/src/scss/container.sass
+++ b/src/scss/container.sass
@@ -38,6 +38,6 @@ $space-xxl: 100px
             justify-content: center
             align-items: center
             height: 100vh
-            @media all and (orientation: landscape), all and (max-height: 576px)
+            @media (max-height: 576px)
                 padding: 80px 0
                 height: 100%
