--- a/src/index.pug
+++ b/src/index.pug
@@ -38,10 +38,21 @@ html(lang="en")
                                 h2.caption.caption--size_2.caption--bolder.caption--align_center.caption--color_white.caption--line_height_1 These are some of my projects
                         .cell.cell--12.cell--6-md.cell--4-lg
                             .card.card--shadow.card--space_bottom_l
+                                a(href="https://www.travooo.com/login" target="_blank")
+                                    .card__panel
+                                        .aspect-ratio
+                                            img(src="./img/travooo.jpg", alt="travooo").aspect-ratio__body
+                                    .card__panel.card__panel--bg_grey
+                                        h4.caption.caption--size_4.caption--color_white.caption--align_center 
+                                            span < 
+                                            | Travooo
+                                            span  />  
+                        .cell.cell--12.cell--6-md.cell--4-lg
+                            .card.card--shadow.card--space_bottom_l
                                 a(href="https://bohdan-sys.github.io/random-quote/" target="_blank")
                                     .card__panel
                                         .aspect-ratio
-                                            img(src="./img/Random Quote.jpg", alt="Tribute Page").aspect-ratio__body
+                                            img(src="./img/Random Quote.jpg", alt="Random Quote").aspect-ratio__body
                                     .card__panel.card__panel--bg_grey
                                         h4.caption.caption--size_4.caption--color_white.caption--align_center.project-title 
                                             span < 
@@ -63,7 +74,7 @@ html(lang="en")
                                 a(href="https://bohdan-sys.github.io/Moving-NJ/" target="_blank")
                                     .card__panel
                                         .aspect-ratio
-                                            img(src="./img/moving NJ.jpg", alt="clock").aspect-ratio__body
+                                            img(src="./img/moving NJ.jpg", alt="Moving NJ").aspect-ratio__body
                                     .card__panel.card__panel--bg_grey
                                         h4.caption.caption--size_4.caption--color_white.caption--align_center 
                                             span < 
@@ -74,7 +85,7 @@ html(lang="en")
                                 a(href="https://bohdan-sys.github.io/drum-machine/" target="_blank")
                                     .card__panel
                                         .aspect-ratio
-                                            img(src="./img/drum-machine.jpg", alt="clock").aspect-ratio__body
+                                            img(src="./img/drum-machine.jpg", alt="Drum Machine").aspect-ratio__body
                                     .card__panel.card__panel--bg_grey
                                         h4.caption.caption--size_4.caption--color_white.caption--align_center 
                                             span < 
@@ -82,21 +93,10 @@ html(lang="en")
                                             span  />      
                         .cell.cell--12.cell--6-md.cell--4-lg
                             .card.card--shadow.card--space_bottom_l
-                                a(href="https://bohdan-sys.github.io/markdown-editor/" target="_blank")
-                                    .card__panel
-                                        .aspect-ratio
-                                            img(src="./img/MarkDown.jpg", alt="clock").aspect-ratio__body
-                                    .card__panel.card__panel--bg_grey
-                                        h4.caption.caption--size_4.caption--color_white.caption--align_center 
-                                            span < 
-                                            | Markdown Previewer
-                                            span  />  
-                        .cell.cell--12.cell--6-md.cell--4-lg
-                            .card.card--shadow.card--space_bottom_l
                                 a(href="https://bohdan-sys.github.io/calculator" target="_blank")
                                     .card__panel
                                         .aspect-ratio
-                                            img(src="./img/reactCalculator.jpg", alt="clock").aspect-ratio__body
+                                            img(src="./img/reactCalculator.jpg", alt="Calculator").aspect-ratio__body
                                     .card__panel.card__panel--bg_grey
                                         h4.caption.caption--size_4.caption--color_white.caption--align_center 
                                             span < 
